# TMAU-2025

./: .gitignore  CMakeLists.txt  README.md  main  main_as06602
.github/workflows/: build.yml  check_branch_name.yml  ci.yml
as06609/task_01/doc/: readme.md
as06609/task_01/src/: CmakeLists.txt  tmay11.cpp
as06611/task_01/doc/: README.md
as06611/task_01/src/: CMakeLists.txt  LAB1.cpp  LAB1t2.cpp  LAB1t3.cpp  laba1tmau.cpp
tasks/as06615/task_01/src/: CMakeLists.txt  main.cpp
trunk/as006505/: .gitignore
trunk/as006505/task_01/src/: CMakeLists.txt  main.cpp
trunk/as006505/task_02/doc/: readme.md
trunk/as006505/task_02/src/: CMakeLists.txt  model.cpp  model.h  task_02.cpp
trunk/as006505/task_02/test/: testmodel.cpp
trunk/as05602/task_01/src/: main.cpp
trunk/as06501/task_01/doc/: readme.md
trunk/as06501/task_01/src/: laba1.cpp
trunk/as06501/task_02/doc/: readme.md
trunk/as06501/task_02/src/: CMakeLists.txt  func.cpp  func.h  lab1.cpp  lab1.h  laba1.cpp  main.cpp
trunk/as06501/task_02/test/: tests.cpp
trunk/as06502/task_01/doc/: CMakeLists.txt  main.cpp
trunk/as06502/task_01/src/: main.cpp
trunk/as06502/task_02/: .gitignore  CMakeLists.txt
trunk/as06502/task_02/doc/: readme.md
trunk/as06502/task_02/src/: main.cpp  model_functions.cpp  model_functions.h  temperature_model.cpp  temperature_model.h
trunk/as06502/task_02/test/: main_test.cpp  test_temperature_model.cpp
trunk/as06502/task_03/doc/: readme.md
trunk/as06502/task_04/doc/: readme.md
trunk/as06502/task_06/doc/: readme.md
trunk/as06502/task_07/doc/: readme.md
trunk/as06503/task_01/doc/: readme.md
trunk/as06503/task_01/src/: laba1.cpp
trunk/as06503/task_02/src/: CMakeLists.txt  main.cpp
trunk/as06503/task_02/test/: tests.cpp
trunk/as06503/task_03/doc/: readme.md
trunk/as06503/task_04/doc/: readme.md
trunk/as06503/task_05/doc/: readme.md
trunk/as06503/task_06/doc/: readme.md
trunk/as06503/task_07/doc/: readme.md
trunk/as06504/task_01/doc/: readme.md
trunk/as06504/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06504/task_02/doc/: readme.md
trunk/as06504/task_02/src/: CMakeLists.txt  model.cpp  model.h
trunk/as06504/task_02/test/: tests.cpp
trunk/as06505/: ФИО.txt
trunk/as06505/task_01/doc/: readme.md  readme.md.md
trunk/as06505/task_01/src/: CMakeLists.txt  laba1_tmau.cpp
trunk/as06505/task_02/doc/: readme.md
trunk/as06505/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06505/task_02/test/: tests.cpp
trunk/as06505/task_03/doc/: readme.md
trunk/as06505/task_04/doc/: readme.md
trunk/as06506/task_01/doc/: readme.md
trunk/as06506/task_01/src/: laba1tmau.cpp
trunk/as06506/task_02/doc/: readme.md
trunk/as06506/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06506/task_02/test/: tests.cpp
trunk/as06507/task_01/doc/: README.md  readme.md
trunk/as06507/task_01/src/: CMakeLists.txt  main.cpp
trunk/as06507/task_02/doc/: readme.md
trunk/as06507/task_02/src/: CMakeLists.txt  model.cpp  model.h
trunk/as06507/task_02/test/: tests.cpp
trunk/as06508/: ФИО.txt
trunk/as06508/task_01/doc/: readme.md
trunk/as06508/task_01/src/: CMakeLists.txt  Lab1.cpp  main.cpp
trunk/as06508/task_02/doc/: readme.md
trunk/as06508/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06508/task_02/test/: tests.cpp
trunk/as06508/task_03/doc/: readme.md
trunk/as06508/task_04/doc/: readme.md
trunk/as06508/task_05/doc/: readme.md
trunk/as06508/task_06/doc/: readme.md
trunk/as06508/task_07/doc/: readme.md
trunk/as06509/src/: LAB1.cpp
trunk/as06509/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06511/task_02/src/: CMakeLists.txt  main.cpp  temp_model.cpp  temp_model.h
trunk/as06514/task_02/src/: CMakeLists.txt  temperature_model.cpp  temperature_model.h
trunk/as06515/task_02/src/: CMakeLists.txt  main.cpp  module.cpp  module.h  temperature_model.cpp  temperature_model.h
trunk/as06516/task_02/: CMakeLists.txt
trunk/as06516/task_02/doc/: readme.md
trunk/as06516/task_02/src/: CMakeLists.txt  main.cpp
trunk/as06516/task_02/test/: CMakeLists.txt  test_main.cpp  tests.cpp
trunk/as06517/doc/: README.MD
trunk/as06517/src/: CMakeLists.txt  model_egorenkov.cpp  task_02_egorenkov.cpp
trunk/as06517/test/: testmodel_egorenkov.cpp
trunk/as06519/task_02/src/: CMakeLists.txt  main.cpp  temp_model.cpp  temp_model.h
trunk/as06521/task_02/src/: CMakeLists.txt  temperature_model.cpp  temperature_model.h
trunk/as06523/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06601/task_02/: CMakeLists.txt
trunk/as06601/task_02/doc/: README.md
trunk/as06601/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06601/task_02/tests/: CMakeLists.txt  model_tests.cpp
trunk/as06602/task_02/: CMakeLists.txt  readme.md
trunk/as06602/task_02/doc/: readme.md
trunk/as06602/task_02/src/: CMakeLists.txt  main.cpp  model.cpp
trunk/as06602/task_02/test/: test_model.cpp
trunk/as06603/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06604/task_02/src/: CMakeLists.txt  main.cpp  t_model.cpp  t_model.h
trunk/as06606/task_06/: README.md
trunk/as06607/task_02/src/: CMakeLists.txt  model.cpp  model.h
trunk/as06608/: ФИО.txt
trunk/as06609/src/: CMakeLists.txt  tmau1.cpp
trunk/as06609/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06611/task_02/src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
trunk/as06612/task2/src/: CMakeLists.txt  func.cpp  func.h  main.cpp
trunk/as06613/task_01/src/: CMakeLists.txt  main.cpp  task1.cpp
trunk/as06614/task_01/src/: CMakeLists.txt  main.cpp  task1.cpp
trunk/as06617/task_02/src/: CMakeLists.txt  func.cpp  func.h  main.cpp  tests.cpp
trunk/as06618/task_02/: CMakeLists.txt
trunk/as06618/task_02/doc/: README.md  readme.md
trunk/as06618/task_02/src/: CMakeLists.txt  func.cpp  func.h  functions.cpp  functions.h  main.cpp  model.cpp  model.h
trunk/as06618/task_02/test/: model_tests.cpp  tests.cpp
trunk/as06621/task_07/: README.md
trunk/as06625/: ФИО.txt
(+271 files in other folders)
